--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "sequelize-cli db:migrate --config config.js",
     "seed": "sequelize-cli db:seed:all --config config.js",
-    "seed:undo": "sequelize-cli db:seed:undo:all --config config/config.js"
+    "seed:undo": "sequelize-cli db:seed:undo:all --config config/config.js",
+    "start": "node app.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +17,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
