--- a/config/config.json
+++ b/config/config.json
@@ -14,10 +14,11 @@
     "dialect": "postgres"
   },
   "production": {
-    "username": "putriii",
-    "password": "",
-    "database": "curahhujan_db",
-    "host": "127.0.0.1",
+    "username": "${DB_USERNAME}",
+    "password": "${DB_PASSWORD}",
+    "database": "${DB_NAME}",
+    "host": "${DB_HOST}",
+    "port": "${DB_PORT}",
     "dialect": "postgres"
   }
 }
