--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^7.0.5",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
+    "resend": "^6.0.1",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3",
     "uuid": "^11.1.0"
